Thu Apr 09 00:40:24 GMT 2015  Olly Betts <olly@survex.com>

	* net/remoteconnection.h: Avoid compiler warning from clang in new
	  getaddrinfo() code.

Wed Apr 08 11:59:00 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Add missing cast to unsigned char when
	  we check if the value will fit in the double type.  On machines with
	  IEEE-754 doubles (which is most current platforms), which change
	  makes no difference as we're checking if the value cast to a double
	  is > 255.<something> which is never the case.

Wed Apr 08 10:42:43 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Avoid reading one byte past the end of
	  the serialised value.  In practice this was harmless on most
	  platforms, as dbl_max_mantissa is 255 for IEEE-754 format doubles,
	  and at least GCC's std::string keeps the buffer nul-terminated.
	  Reported by Germán M. Bravo in github PR#67.
	* tests/unittest.cc: Copy the serialised value to a temporary buffer
	  before calling unserialise_double() so that valgrind can detect if
	  we read one byte past the end.

Tue Apr 07 23:02:21 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/: Fix problems with get_unique_terms() on a modified
	  chert database.
	* tests/: Add more test coverage for get_unique_terms().

Mon Apr 06 00:22:22 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_multi.cc,
	  tests/harness/backendmanager_remote.cc: Cleaner code for checking
	  the backend subtype.

Mon Mar 30 03:22:29 GMT 2015  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: If available, use F_DUPFD to dup to a file
	  descriptor which is >= 2.

Mon Mar 30 01:16:06 GMT 2015  Olly Betts <olly@survex.com>

	* api/error.cc,common/safenetdb.h,configure.ac,generate-exceptions,
	  net/remoteconnection.h,net/tcpclient.cc,net/tcpserver.cc: Use
	  getaddrinfo() instead of gethostbyname(), as a step towards
	  IPv6 support (currently we still only look for IPv4 addresses).
	  See #374.
